# pneumonia-detector

./: .gitignore  .pdm-python  Brewfile  README.md  cnn-rsna-pneumonia-detection.ipynb  justfile  pyproject.toml  requirements.txt
pneumonia_detector/: main.py  view.py
